# peer_backend

./: .dockerignore  .env.dev  .env.schema  .gitignore  .gitleaksignore  .gitmessage  .last_cleanup  .php-cs-fixer.cache  .php-cs-fixer.php  .redis.conf  0-otc-dev-backend-make_server_archive.sh  1-otc-dev-jumphost-get_server_archive.sh  2-ovh-backend-apply_server_archive.sh  2025-03-31_rate_limiter_storage.json  2025-04-02_rate_limiter_storage.json  20250903000000_logwins_migration.sql  AGENTS.md  Base64FileHandlerTest.php  Dockerfile  Dockerfile.base  Dockerfile.local  Dockerfile.newman  INFO.txt  Makefile  README.md  README_local_ci.md  WalletServiceTest.php  autopull.txt  cd-generate-backend-config.sh  composer.json  docker-compose.override.ci.yml  docker-compose.override.local.yml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  generate-backend-config.sh  gitleaks.toml  phinx.php  phpstan.neon  phpunit.xml.dist  (+5 more)
.codex/: AGENTS.md  Codebase-research.md  Implementation-plan.md
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.security/: Readme_gitleaks.md  gitleaks.toml
db/: staging_server_additional_data.sql
docker/: supervisord.conf
docs/: newman_ci_analysis.md  notifications-worker.service
emailverification/: Cargo.toml
emailverification/src/: lib.rs
migrations/: 20250613121522_test_post_title_to_array_migration.php
public/: index.php  websocket-server.php
scripts/: 202508141050_sensitiveDataReplacer.sql  diff.sh
sql_files_for_import/: 001_structure.sql  003_additional_data.sql  20250824000000_posts_status.sql  (+46 more)
(+833 files in other folders)
