[package]
name = "emailverification"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
check-if-email-exists = { git = "https://github.com/reacherhq/check-if-email-exists.git", tag = "v0.11.6" }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread"] }
